// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard renders standard card 1`] = `
<div
  className="container-block hXHtmw"
>
  <div
    className="igiVqV"
  >
    <img
      alt="image"
      className="fIQgYS"
      src="http://localhost/img.png"
      title="image"
    />
    <div
      className="iRzHme"
    />
  </div>
</div>
`;

exports[`ImageCard renders type = half 1`] = `
<div
  className="dGrJdi"
>
  <div
    className="container-block bgkVzE"
  >
    <img
      alt=""
      className="fIQgYS"
      src="http://localhost/img.png"
      title=""
    />
  </div>
  <div
    className="brJtrF"
  >
    <span
      className="jJmwnS"
    >
      <div
        className="text text--dark text--primary image-card__title--half hTwOaP"
        disabled={false}
        size={
          Object {
            "large": "hecto",
            "medium": "hecto",
            "small": "hecto",
          }
        }
      >
        <span
          className="jJmwnS"
        >
          Title
        </span>
      </div>
    </span>
    <span
      className="eKXBpw"
    >
      <div
        className="text text--dark text--primary image-card__subtitle--half hTwOaP"
        disabled={false}
        size={
          Object {
            "large": "hecto",
            "medium": "hecto",
            "small": "hecto",
          }
        }
      >
        <span
          className="eKXBpw"
        >
          Sub Title
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`ImageCard renders with additional content when \`cardTitle\` and \`cardSubtitle\` prop values are not provided (old API support) 1`] = `
<div
  className="container-block hXHtmw"
>
  <div
    className="igiVqV"
  >
    <img
      alt=""
      className="fIQgYS"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="iRzHme"
    >
      <div
        className="dAmSFY"
      >
        <span
          className="jJmwnS"
        >
          Title
        </span>
        <span
          className="eKXBpw"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom image 1`] = `
<div
  className="container-block hXHtmw"
>
  <div
    className="igiVqV"
  >
    <svg />
    <div
      className="iRzHme"
    >
      <div
        className="dAmSFY"
      >
        <span
          className="jJmwnS"
        >
          Title
        </span>
        <span
          className="eKXBpw"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom props 1`] = `
<div
  className="container-block hXHtmw"
>
  <div
    className="igiVqV"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <img
      alt=""
      className="fIQgYS"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="iRzHme"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="dAmSFY"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <span
          className="jJmwnS"
        >
          Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle 1`] = `
<div
  className="container-block hXHtmw"
>
  <div
    className="igiVqV"
  >
    <img
      alt=""
      className="fIQgYS"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="iRzHme"
    >
      <div
        className="dAmSFY"
      >
        <span
          className="jJmwnS"
        >
          Title
        </span>
        <span
          className="eKXBpw"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle, extra content 1`] = `
<div
  className="container-block hXHtmw"
>
  <div
    className="igiVqV"
  >
    <img
      alt=""
      className="fIQgYS"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="iRzHme"
    >
      <div
        className="dAmSFY"
      >
        <span
          className="jJmwnS"
        >
          Title
        </span>
        <span
          className="eKXBpw"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;
